[package]
name = "notehub"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
octocrab = "0.32"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
